VersionFieldIT should register transportClientPlugins